--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+
+.movieGrid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1em;
+  margin: 1em;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+}
+
+.pageSelected {
+  background-color: gray;
+  padding: 5px;
+  border-radius: 40%;
+  color:brown;
+}
+
+.genres {
+  margin: 0.5em;
+  margin-top: 1em;
+}
